<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="Home"
            />
        <item
            android:id="@+id/nav_profile"
            android:title="Profile"
            />
        <item
            android:id="@+id/History"
            android:title="History"
            />
<!--        <item-->
<!--            android:id="@+id/nav_Log_out"-->
<!--            android:title="Log out"-->
<!--            />-->

    </group>
</menu>
