<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userPwdInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:paddingTop="180sp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
...


    <TextView
        android:id="@+id/logo_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/your_pwd"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_logIn"
        android:layout_width="130dp"
        android:layout_height="39dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="458dp" />

...
